fix: Resolve issue of text-align in footer section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -77,6 +77,7 @@ header {
   padding-right: 5px;
   display: flex;
   align-items: center;
+  text-align: left;
 }
 
 .btn-sm {
